2010-05-03  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Adam Barth.

        Add support for controlling clipboard access from javascript.
        Clipboard access from javascript is disabled by default.
        https://bugs.webkit.org/show_bug.cgi?id=27751

        * public/WebSettings.h:
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::setJavaScriptCanAccessClipboard):
        * src/WebSettingsImpl.h:

2010-05-03  Jens Alfke  <snej@chromium.org>

        Reviewed by Darin Fisher.

        [chromium] Add "willSendSubmitEvent" hook to WebFrameClient and FrameLoaderClient
        https://bugs.webkit.org/show_bug.cgi?id=38397

        No tests (functionality is exposed only through native WebKit API.)

        * public/WebFrameClient.h:
        (WebKit::WebFrameClient::willSendSubmitEvent): New empty method
        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::dispatchWillSendSubmitEvent): Delegate to client
        * src/FrameLoaderClientImpl.h:

2010-05-02  Michael Nordman  <michaeln@google.com>

        Reviewed by Dmitry Titov.

        Define two new ResourceRequestBase TargetTypes for worker and shared worker
        main resources. Use the new target types where appropiate. Add logic to marshal
        the target type specified by requests initiated on a background worker thread.

        https://bugs.webkit.org/show_bug.cgi?id=38295

        * src/SharedWorkerRepository.cpp:  use TargetIsSharedWorker
        (WebCore::SharedWorkerScriptLoader::SharedWorkerScriptLoader):

2010-05-02  Rafael Weinstein  <rafaelw@chromium.org>

        Reviewed by Darin Fisher.

        Include WebWindowFeatures in call to WebViewClient::createView.
        https://bugs.webkit.org/show_bug.cgi?id=38301

        * public/WebViewClient.h:
        (WebKit::WebViewClient::createView):
        * public/WebWindowFeatures.h:
        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::createWindow):
