@@ -1,3 +1,13 @@
+2010-05-04  Jay Civelli  <jcivelli@chromium.org>
+
+        Reviewed by David Levin.
+
+        [chromium] Make the select popup not close on right/middle clicks.
+        https://bugs.webkit.org/show_bug.cgi?id=38473
+
+        * src/WebViewImpl.cpp:
+        (WebKit::WebViewImpl::mouseDown):
+
 2010-05-03  Abhishek Arya  <inferno@chromium.org>
 
         Reviewed by Adam Barth.
